# living-content-api

./: .gitignore  Dockerfile-api  Dockerfile-mongo  Dockerfile-redis  README.md  docker-compose.yaml.old  docker-compose.yaml.template  flake.nix  lc.sh  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: -feat--enter-the-feature-name.md
.templates/: secrets.yaml
.templates/config/: clients.yaml  deployment.yaml  eqty.yaml  ingress.yaml  internal_functions.yaml  persona.yaml  plugins.yaml  project.yaml
app/clients/: mongo_client.py  openai_client.py  redis_client.py  websocket_client.py
app/lib/: __init__.py  config.py  connection_manager.py  content_session_manager.py  dependencies.py  function_handler.py  internal_functions.py  logging_config.py  mongo_operations.py  notification_manager.py  permissions_token_manager.py  query_handler.py  redis_operations.py  secrets.py  user_manager.py  websocket_manager.py
app/middleware/: access_token_middleware.py  custom_cors_middleware.py
app/models/: access_token.py  content_session.py  function.py  notification.py  permissions_token.py  query.py  user.py  websocket.py
app/plugins/audio_generator/: dependencies.py  functions.py  jenai_client.py  jenai_request_handler.py  models.py  router.py
app/plugins/audio_generator/providers/jenai/: jenai_client.py  jenai_request_handler.py
app/plugins/image_generator/: apiframe_request_handler.py  apiframe_response_handler.py  dependencies.py  functions.py  models.py  router.py
app/plugins/image_generator/providers/apiframe/: apiframe_client.py  apiframe_request_handler.py  apiframe_response_handler.py
app/plugins/speech_services/: functions.py  models.py  openai_realtime_handler.py  openai_tts_handler.py  realtime_handler.py  router.py
app/plugins/speech_services/providers/openai/: openai_realtime_client.py  openai_tts_handler.py
app/routers/: access_token.py  content_session.py  function.py  health.py  notifications.py  permissions_token.py  query.py  tts.py  user.py  webhook.py  websocket.py
app/schemas/: mongo_schema.py
docs/: README.md  api.md  cli.md  configuration.md  domains.md  getting-started.md  installation.md  plugins.md  schemas.md
documentation/: README.md  api.md  client-architecture.md  deployment.md  plugins.md  security-improvements.md  userid.md
lco-api/: pyproject.toml
lco-api/documentation/: README.md
lco-api/src/cli/: __init__.py  main.py
lco-api/src/models/: __init__.py  config.py
lco-api/src/services/: __init__.py  config_service.py  docker_service.py  ssl_service.py
requirements/: requirements.txt
scripts/: orchestrator.py
scripts/api/: api-entrypoint.sh
scripts/deployment/aws/: deploy-to-s3.sh  invalidate-cloudfront.sh  static_site_to_s3-actions.txt
scripts/deployment/google/: generate_gke_secrets.py  gke_instance-setup_example.md
scripts/eqty/: eqty-asset_signer.py
scripts/eqty/authorizations/assets/: image1.json
scripts/eqty/authorizations/functions/: generate_an_image.json
scripts/mongo/: mongo-create_users.sh  mongo-db_setup.py  mongo-entrypoint.sh
scripts/redis/: redis-entrypoint.sh
scripts/system/: env-generate.py  init-config.py  init-deployment.py  secrets-generate.py
