[project]
name = "living-content-api"
version = "2.0.0"
description = "Living Content API - AI-powered content management system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=22.0.0",
    "motor>=3.4.0",
    "pymongo>=4.7.0",
    "redis[hiredis]>=5.0.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "openai>=1.77.0",
    "boto3>=1.34.0",
    "eqty>=0.6.9",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
    "tenacity>=8.3.0",
    "websockets>=12.0",
    "pyOpenSSL>=23.0.0",
    "psutil>=6.0.0",
    "inflection>=0.5.0",
    "filelock>=3.16.0",
    "pydantic>=2.0.0",
    "google-cloud-firestore>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "C90"]
ignore = ["E501", "B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"